mycollab-web/src/main/resources/VAADIN/themes/mycollab/styles.css
/* ... */
/* End Popup Window */

/* Rating Stars */
.v-table-row-odd .v-ratingstars-wrapper-tiny .v-ratingstars-star {
	background-image: url("icons/star_12x11.png");
}
/* End Rating Stars */

/* No border Panel */
.v-label-h2.no-border {
	border: none;
}

.v-panel.no-border .v-panel-nocaption {
	border-top: none;
}

.v-panel.no-border .v-panel-deco {
	border-top: none;
}

.v-panel.no-border div.v-panel-content-light {
	border: none;
}

.v-panel.no-border .v-panel-content {
	border: none;
}
/* End no border Panel */

/* Form Container View Field */
.form-container .v-csslayout .v-button-link {
	height: 18px;
	border-radius: 8px 8px 8px 8px;
	background: url("icons/grad-dark-bottom.png") repeat-x scroll left
		bottom rgb(57, 71, 84);
	padding: 0px 7px 1px;
	margin-right: 2px;
}

.form-container .v-csslayout .v-button-link .v-button-caption {
	color: white;
}
/* End Form Container View Field */

/* LazyLoad */
div.v-lazyloadingwrapper-loading {
	background-color: transparent;
	background-image: url('icons/loading-indicator2.gif');
	border: none;
}
/* End LazyLoad */

/* Mail Panel */
.mail-panel .v-gridlayout-margin {
	max-height: 150px;
	overflow-y: auto;
}
/* End Mail Panel */

/* Progress Indicator */
.v-progressbar-wrapper {
	height: 18px;
	background: none no-repeat 0 0 rgb(245, 245, 245);
	border: 1px solid rgb(161, 161, 161);
}

.v-progressbar-indicator {
	height: 18px;
	border-radius: 2px;
	-webkit-border-radius: 2px;
	-moz-border-radius: 2px;
	background: url(img/grad-light-top.png) repeat-x 0 0 rgb(169, 193, 229);
	margin: -1px;
	border: 1px solid rgb(45, 107, 165);
}
/* End Progress Indicator */

/* Vertical Detached Tabs 2 */
.detachedtabs .v-button-tab {
	border: none;
	background: none no-repeat 0 0 transparent;
	border-radius: 0px;
	padding: 4px 13px;
}

.detachedtabs .v-button-tab>.v-button-wrap {
	background: none no-repeat 0 0 transparent;
	border-radius: 0px;
	text-align: left;
	border: none;
}

.detachedtabs .v-button-tab.tab-selected>.v-button-wrap {
	background: none no-repeat 0 0 rgb(40, 126, 206);
}

.detachedtabs .v-button-tab>.v-button-wrap>.v-icon {
	margin-right: 8px;
}

.detachedtabs .v-button-tab>.v-button-wrap>.v-button-caption {
	line-height: 24px;
}

/* End Vertical Detached Tabs 2 */

/* Horizontal Detached Tabs 3 */
.tab-style3 .detachedtabs {
	background: url("icons/border-bottom2.png") repeat-x left bottom
		transparent;
	position: relative;
}

.tab-style3 .detachedtabs .v-nativebutton {
	background: none;
	border: none;
	padding: 0px 20px 0px 0px;
	color: #918e8e;
}

.tab-style3 .detachedtabs .v-nativebutton:hover {
	color: rgb(94, 94, 94);
}

.tab-style3 .detachedtabs .v-nativebutton.v-nativebutton-tab-selected,.tab-style3 .detachedtabs .v-nativebutton.v-nativebutton-tab-selected:hover
	{
	position: relative;
	color: rgb(40, 126, 206);
}

.tab-style3 .detachedtabs .v-nativebutton .v-nativebutton-caption,.tab-style3 .detachedtabs .v-nativebutton.tab-selected .v-nativebutton-caption
	{
	background: none;
	font-weight: bold;
	width: 100%;
	text-align: center;
	padding: 5px 0px 4px 10px !important;
}

.tab-style3 .detachedtabs .v-nativebutton-tab-selected:after {
	content: " ";
	display: block;
	width: 100%;
	height: 2px;
	background: #2E9DFF;
	position: absolute;
	bottom: 0px;
	left: 0px;
}
/* End Horizontal Detached Tabs 3 */

/* StandUp Report List */
.projectDashboardView .addViewLayout .depotContent .beanlist-content>.v-csslayout-margin
	{
	border-top: 1px solid rgb(169, 169, 169);
}

.report-row-header {
	font-weight: bold;
	background: url("icons/timehdr-bg.png") no-repeat left top transparent;
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	box-sizing: border-box;
	padding-left: 15px;
	color: white;
}

.instructionStandupBox {
	background-color: #E9E9E9;
	padding: 10px;
	-moz-border-radius: 15px;
	border-radius: 15px;
	margin-top: 15px;
}

.report-row-content {
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	box-sizing: border-box;
	border-width: 1px 0px 1px 0px;
	border-style: solid;
	border-color: rgb(204, 204, 204);
	background-color: rgb(229, 239, 240);
}

.report-row-content>div>div:first-child+div {
	border-width: 0px 1px 0px 1px;
	border-style: solid;
	border-color: rgb(204, 204, 204);
	background-color: rgb(212, 223, 239);
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	box-sizing: border-box;
}

.report-row-block {
	height: 100%;
	padding: 5px 8px 0px;
}

.report-row-block.special-col {
	
}

.addViewLayout .standup-edit-layout .h2 {
	border-bottom: none;
}

.standupreport-list-header {
	border: 1px solid rgb(169, 169, 169);
	border-radius: 3px 3px 0px 0px;
	background: url("icons/grad-light-top2.png") repeat-x left top
		rgb(228, 228, 228);
	padding: 3px 10px 3px 18px;
}

.standupreport-list-header .v-popupbutton {
	background: none;
	border: none;
}

.standupreport-list-header .v-popupbutton>.v-button-wrap {
	background: none;
}

.standupreport-list-header .v-popupbutton:active>.v-button-wrap {
	border: none;
}

.standupreport-list-header .v-popupbutton>.v-button-wrap>.v-button-caption
	{
	font-weight: bold;
	font-size: 14px;
}

.standupreport-list-content {
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	box-sizing: border-box;
	border-width: 0px 1px 1px 1px;
	border-style: solid;
	border-color: rgb(169, 169, 169);
	background-color: rgb(245, 245, 245);
}

.standupreport-list-content .depotComp {
	margin: 0px;
}

.standupreport-list-content .depotComp .depotHeader {
	background-color: rgb(245, 245, 245);
	border-width: 1px 0px 1px 0px;
}

.standupreport-list-content .depotComp.first-report .depotHeader
{
	border-width: 0px 0px 1px 0px;
}

.standupreport-list-content .depotComp .depotContent.v-margin-top
{
	padding-top: 10px;
}

.standupreport-list-content .depotComp .depotContent.v-margin-left
{
	padding-left: 10px;
}
/* End StandUp Report List */

/* Clickable Label */
.clickable-label {
	cursor: pointer;
}

.clickable-label>img.plus-btn {
	vertical-align: bottom;
}
/* ... */

